2000-10-13  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-cursor.el (skk-cursor-buffer-local-frame-params-ad-targets):
	Add `skk-j-mode-on'.
	(minibuffer-setup-hook): No longer call
	`set-buffer-local-cursor-color' under FSF Emacs.

2000-10-13  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-cursor.el: Changes for XEmacs.
	(minibuffer-keyboard-quit): New advice.
	(minibuffer-exit-hook): Call `set-face-property' in the
	minibuffer.

	* skk-macs.el (skk-emacs-type, skk-detect-emacs): Check the
	feature `xemacs'.

2000-10-12  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* ccc.el (buffer-local-cursor-color-default,
	buffer-local-foreground-color-default,
	buffer-local-background-color-default): Check the feature
	`xemacs'.

	* skk-cursor.el: Ditto.
	(minibuffer-setup-hook): Call `set-buffer-local-cursor-color'
	under FSF Emacs.

	* skk-gadget.el (skk-clock): Don't perform redisplay in `sit-for'.

	* skk-isearch.el (skk-isearch-delete-char): Use `when'.

	* skk-jisx0201.el (skk-jisx0201-insert, skk-toggle-katakana):
	Don't call `skk-cursor-set-properly'. Call `set-face-property' or
	`set-buffer-local-cursor-color' instead.

	* skk-obsolete.el (skk-obsolete-function-alist): Don't check
	`skk-set-cursor-color' and `skk-set-cursor-properly'.

	* skk-vars.el (skk-emacs-type): Check the feature `xemacs'.

	* skk.el (skk-setup-modeline): Don't use `mapcar'.

2000-10-08  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk.el (skk-count-jisyo-candidates): Use `default-directory'
	instead of "~/".
	Show "candidate" instead of "candidates" if `count' is 1.

2000-10-05  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk.el (skk-count-jisyo-candidates): Show "candidates", not
	"entries".
	(skk-count-jisyo-candidates-original): Don't search slashes in
	midashi words.

2000-10-03  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* READMEs/FAQ.txt: Change filename description in end of filename
	tag.

2000-10-02  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>
