@@ -5,9 +5,9 @@
 
 ;; Author: Masahiko Sato <masahiko@kuis.kyoto-u.ac.jp>
 ;; Maintainer: SKK Development Team <skk@ring.gr.jp>
-;; Version: $Id: skk.el,v 1.19.2.6.2.79 2000/10/12 10:09:57 czkmt Exp $
+;; Version: $Id: skk.el,v 1.19.2.6.2.80 2000/10/14 22:18:33 minakaji Exp $
 ;; Keywords: japanese
-;; Last Modified: $Date: 2000/10/12 10:09:57 $
+;; Last Modified: $Date: 2000/10/14 22:18:33 $
 
 ;; Daredevil SKK is free software; you can redistribute it and/or modify it under
 ;; the terms of the GNU General Public License as published by the Free
@@ -90,7 +90,7 @@
   (if (not (interactive-p))
       skk-version
     (save-match-data
-      (let* ((raw-date "$Date: 2000/10/12 10:09:57 $")
+      (let* ((raw-date "$Date: 2000/10/14 22:18:33 $")
              (year (substring raw-date 7 11))
              (month (substring raw-date 12 14))
              (date (substring raw-date 15 17)))
@@ -870,7 +870,8 @@ dependent."
              (setq char (skk-what-char-type)))
            (cond ((eq char 'hiragana)
                   (skk-katakana-region
-		   skk-henkan-start-point skk-henkan-end-point))
+		   skk-henkan-start-point skk-henkan-end-point
+		   'vcontract))
                  ((eq char 'katakana)
                   (skk-hiragana-region
 		   skk-henkan-start-point skk-henkan-end-point))
